<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginHorizontal="@dimen/margin_grid_layout"
                android:layout_marginTop="56dp"
                android:background="@drawable/bg_topside_box"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/subheader_box"
                    style="@style/subheaderStyle"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/box_home_heading"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/regular_box"
                    style="@style/regularStyle"
                    android:text="@string/box_home_subheading"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/subheader_box"
                    app:layout_constraintTop_toBottomOf="@+id/subheader_box" />

                <ImageView
                    android:id="@+id/icon_info_home"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/info_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.491" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginHorizontal="@dimen/margin_grid_layout"
                android:background="@drawable/bg_bottomside_box"
                android:elevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                tools:layout_editor_absoluteX="20dp">

                <TextView
                    style="@style/subheaderStyle"
                    android:layout_marginStart="4dp"
                    android:text="@string/scan_text_home"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/scan_button_home"
                    android:layout_width="108dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/text_color"
                    android:drawableLeft="@drawable/ic_outline_qr_code_scanner_24"
                    android:fontFamily="@font/poppins"
                    android:gravity="left|center_vertical"
                    android:paddingHorizontal="6dp"
                    android:text="@string/check_in_button_home"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/label_home_best_price"
                style="@style/headerStyle"
                android:layout_marginHorizontal="@dimen/margin_grid_layout"
                android:layout_marginTop="24dp"
                android:text="@string/label_home_best_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="@dimen/margin_grid_layout"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/label_home_best_price"
            tools:layout_editor_absoluteX="20dp"
            tools:listitem="@layout/row_item_home" />

            <TextView
                android:id="@+id/label_home_biz_account"
                style="@style/headerStyle"
                android:layout_marginHorizontal="@dimen/margin_grid_layout"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/biz_account_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <LinearLayout
            android:id="@+id/home_change_account_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_grid_layout"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/bg_linear_layout_"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_home_biz_account">

            <TextView
                style="@style/subheaderStyle"
                android:text="@string/learn_more_header_home" />

            <TextView
                style="@style/regularStyle"
                android:justificationMode="inter_word"
                android:text="@string/learn_more_desc_home" />

            <Button
                android:id="@+id/btn_change_account_home"
                style="@style/regularStyle"
                android:layout_gravity="end"
                android:backgroundTint="@color/text_color"
                android:text="@string/learn_more_button_home" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>