<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView_register"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo_djoalan"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_register_name"
        style="@style/subheaderStyle"
        android:alpha="0"
        android:layout_marginTop="32dp"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="@+id/imageView_register"
        app:layout_constraintTop_toBottomOf="@+id/imageView_register" />

    <EditText
        android:id="@+id/edit_register_name"
        android:layout_width="0dp"
        android:alpha="0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_register_name" />

    <TextView
        android:id="@+id/label_register_email"
        style="@style/subheaderStyle"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="@+id/label_register_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_register_name" />

    <com.dicoding.djoalanapplication.customview.EmailEditText
        android:id="@+id/input_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="@+id/label_register_email"
        app:layout_constraintTop_toBottomOf="@+id/label_register_email" />

    <TextView
        android:id="@+id/label_register_password"
        style="@style/subheaderStyle"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="@+id/label_register_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email_register" />

    <com.dicoding.djoalanapplication.customview.PasswordEditText
        android:id="@+id/input_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="@+id/label_register_password"
        app:layout_constraintTop_toBottomOf="@+id/label_register_password" />

    <com.dicoding.djoalanapplication.customview.MyButton
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingLeft="12dp"
        android:paddingRight="0dp"
        android:alpha="0"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_register" />

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>